welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:5: error: unclosed comment
/*  for (i <- 0 to G.length-1){
^golomb:5: error: unclosed comment
/*  for (i <- 0 to G.length-1){
^golomb:5: error: unclosed comment
/*  for (i <- 0 to G.length-1){
^golomb:5: error: unclosed comment
/*  for (i <- 0 to G.length-1){
^golomb:-6: error: Missing closing brace `}' assumed here
try {
^golomb:1: error: expected class or object definition
def golomb(num:Int): Int = {
^golomb:5: error: unclosed comment
/*  for (i <- 0 to G.length-1){
^